--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,9 @@
 ---
 # vars file for vpcyaml
+
+# VPC Vars
+access_key: ""
+secret_key: ""
+region: us-east-1
+vpc_cidr: "12.0.0.0/16"
+vpc_state: "present"
