--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,9 +27,11 @@
     map_public: yes
     wait: yes
     state: "{{ subnet1_state }}"
+    vpc_id: vpc_result.vpc_id
     tags: 
       Name: "{{ vpc_name }}-subnet1"
       Purpose: "Public_subnet" 
+    when: vpc_result.vpc_id is defined
 
 
 
