--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,11 +4,10 @@
 
 # VPC Vars
 vpc_cidr: "12.0.0.0/16"
-vpc_state: "absent"
+vpc_state: "present"
 vpc_name: "My_Test_VPC"
 vpc_desc: "This VPC was created using an Ansible role"
 vpc_tenancy: "default"
 
 # Subnet Vars
-subnet1_cidr: 12.10.10.0/24
-subnet1_state: present
+subnet1_cidr: 12.0.1.0/24
