--- a/vars/main.yml
+++ b/vars/main.yml
@@ -12,3 +12,7 @@ vpc_tenancy: "default"
 # Subnet Vars
 subnet1_cidr: "12.0.1.0/24"
 subnet1_state: "absent"
+
+# IGW Vars
+igw_name: "My-Test-Gateway"
+
