fix: Solve indentation error

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -11,7 +11,7 @@ vpc_tenancy: "default"
 
 # Subnet Vars
 subnet1_cidr: "12.0.1.0/24"
-subnet1_state: "absent"
+subnet1_state: "present"
 
 # IGW Vars
 igw_name: "My-Test-Gateway"
