Update parameters for creating IGW

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -34,6 +34,10 @@
   register: subnet1_result
   when: vpc_result.vpc.id is defined
 
+- name: Show
+  debug: 
+    var=subnet1_result
+
 # Create An Internet Gateway
 - name: Create IGW
   ec2_vpc_igw:
@@ -41,7 +45,17 @@
     aws_secret_key: "{{ secret_key }}"
     region: "{{ region }}"
     vpc_id: "{{ vpc_result.vpc.id }}"
-    state: present
+    state: "{{ igw_state }}"
     tags:
-      name: "{{ igw_name }}"
+      Name: "{{ igw_name }}"
   register: igw_result
+  when: vpc_result.vpc.id is defined
+
+# Create Route
+#- name: Create a public route
+#  ec2_vpc_route_table:
+#   aws_access_key: "{{ access_key }}"
+#   aws_secret_key: "{{ secret_key }}"
+#   region: "{{ region }}"
+
+
